src/test/06-Errors/error-cast.txt
error-cast.ck:1:3: error: invalid cast from 'int' to 'SinOsc'
[1] 5 $ SinOsc;
      ^
